# resvg-py

./: .gitattributes  .gitignore  .readthedocs.yml  Cargo.toml  LICENSE  README.md  a.txt  build.rs  pyproject.toml  renovate.json  resvg_py.pyi  test.html  test.py  test.txt
.github/: dependabot.yml
.github/workflows/: CI.yaml  build.yaml  ci.yaml  pytest.yaml
docs/: api.rst  conf.py  contributing.md  contributing.rst  debugging.md  debugging.rst  exception.md  exceptions.rst  font.md  fonts.rst  index.rst  installation.md  installation.rst  license.md  license.rst  resvg.md  resvg.rst  usage.md  usage.rst
resvg_py/: __init__.py  downloader.py  main.py
scripts/: sync_image_to_json.py
src/: lib.rs
src/python/: test.py
src/python/resvg_py/: __init__.py
src/rust/: lib.rs
tests/: test_complex_camera.py  test_multiple_layer_svg.py  test_normal_shape.py  test_path.py
tests/exception/: test_exception.py
tests/font/: expected_outputs.json  test_font_render.py
tests/layer/: expected_outputs.json  test_multiple_layer_svg.py
tests/path/: expected_outputs.json  test_path.py
tests/shape/: expected_outputs.json  test_complex_camera.py  test_float_options.py  test_normal_shape.py
tests/version/: test_version.py
