[project]
requires-python = ">=3.9"
readme = "README.md"
name = "resvg_py"
dynamic = ["version"]
authors = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[dependency-groups]
build = [
    "maturin>=1.10.2",
]
dev = ["pytest>=8.1.1"]
docs = [
    "sphinx>=7.2.6",
    "furo>=2024.1.29",
    "sphinx-reload>=0.2.0",
    "myst-parser>=3.0.1",
]

[project.urls]
"Source Code" = "https://github.com/baseplate-admin/resvg-py"
Issues = "https://github.com/baseplate-admin/resvg-py/issues"
Documentation = "https://resvg-py.readthedocs.io/"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
