[project]
requires-python = ">=3.10"
readme = "README.md"
name = "resvg_py"
dynamic = ["version"]
authors = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.uv]
default-groups = "all"

[dependency-groups]
build = ["maturin>=1.10.2"]

docs = [
    "sphinx>=7.2.6",
    "sphinx-reload>=0.2.0",
    "shibuya>=2025.10.21",
    "sphinx-copybutton>=0.5.2",
    "sphinx-iconify>=0.1.0",
    "sphinx-contributors>=0.2.0",
    "sphinxcontrib-mermaid>=0.9.0",
    "sphinx-tabs>=3.5.0",
]
test = ["pytest>=8.1.1", "pyperclip>=1.11.0"]

[project.urls]
"Source Code" = "https://github.com/baseplate-admin/resvg-py"
Issues = "https://github.com/baseplate-admin/resvg-py/issues"
Documentation = "https://resvg-py.readthedocs.io/"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.maturin.generate-ci.github]
platforms = ["manylinux", "musllinux", "windows", "macos", "android"]
